Bug 90169 - Radeon ARUBA fails to start xorg/Gnome
Summary: Radeon ARUBA fails to start xorg/Gnome
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-25 07:20 UTC by udo
Modified: 2015-04-28 00:54 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Don't call radeon_get_pixmap_private() when using EXA (1013 bytes, patch)
2015-04-27 03:34 UTC, Michel Dänzer
no flags Details | Splinter Review

Description udo 2015-04-25 07:20:24 UTC
Running Fedora 20 with git xf86-video-ati and git mesa.
Xorg/Gnome starts ok with ddx commit 2fa021f77372ca93375a3d13a0c43a9089674899 (glamor: Remove unused function radeon_glamor_pixmap_is_offscreen).
Next commit 051d46382656ffc3e6cac1aab3aee7efdf5b623a does not work, xorg fails to start, fails to produce a gui in some way or another.
Text screen remains without any keyboard interaction possible. SSH still works.
Bisected to get these commits.
Comment 1 udo 2015-04-25 07:44:27 UTC
A failed start produces a xorg.*.log that ends like this:

[528624.201] (II) RADEON(0): Modeline "720x400"x70.1   28.32  720 738 846 900  400 412 414 449 -hsync +vsync (31.5 kHz e)
[528624.201] (II) RADEON(0): Output HDMI-0 disconnected
[528624.201] (II) RADEON(0): Output VGA-0 disconnected
[528624.201] (II) RADEON(0): Output DVI-0 connected
[528624.201] (II) RADEON(0): Using exact sizes for initial modes
[528624.201] (II) RADEON(0): Output DVI-0 using initial mode 1680x1050 +0+0
[528624.201] (II) RADEON(0): Using default gamma of (1.0, 1.0, 1.0) unless otherwise stated.
[528624.201] (II) RADEON(0): mem size init: gart size :3fdce000 vram size: s:30000000 visible:2f487000
[528624.201] (II) RADEON(0): EXA: Driver will allow EXA pixmaps in VRAM
[528624.201] (==) RADEON(0): DPI set to (96, 96)
[528624.201] (II) Loading sub module "fb"
[528624.201] (II) LoadModule: "fb"
[528624.201] (II) Loading /usr/lib64/xorg/modules/libfb.so
[528624.201] (II) Module fb: vendor="X.Org Foundation"
[528624.201]    compiled for 1.14.4, module version = 1.0.0
[528624.201]    ABI class: X.Org ANSI C Emulation, version 0.4
[528624.201] (II) Loading sub module "ramdac"
[528624.201] (II) LoadModule: "ramdac"
[528624.201] (II) Module "ramdac" already built-in
[528624.201] (--) Depth 24 pixmap format is 32 bpp
[528624.201] (II) RADEON(0): [DRI2] Setup complete
[528624.201] (II) RADEON(0): [DRI2]   DRI driver: r600
[528624.201] (II) RADEON(0): [DRI2]   VDPAU driver: r600
[528624.201] (II) RADEON(0): Front buffer size: 7208K
[528624.201] (II) RADEON(0): VRAM usage limit set to 690670K
[528624.201] (==) RADEON(0): DRI3 disabled
[528624.201] (==) RADEON(0): Backing store disabled
[528624.202] (II) RADEON(0): Direct rendering enabled
[528624.202] (II) EXA(0): Driver allocated offscreen pixmaps
[528624.202] (II) EXA(0): Driver registered support for the following operations:
[528624.202] (II)         Solid
[528624.202] (II)         Copy
[528624.202] (II)         Composite (RENDER acceleration)
[528624.202] (II)         UploadToScreen
[528624.202] (II)         DownloadFromScreen
[528624.202] (II) RADEON(0): Acceleration enabled
[528624.202] (==) RADEON(0): DPMS enabled
[528624.202] (==) RADEON(0): Silken mouse enabled
[528624.202] (II) RADEON(0): Set up textured video
[528624.202] (II) RADEON(0): [XvMC] Associated with Radeon Textured Video.
[528624.202] (II) RADEON(0): [XvMC] Extension initialized.
[528624.202] (II) RADEON(0): RandR 1.2 enabled, ignore the following RandR disabled message.
[528624.202] (--) RandR disabled
[528624.206] (II) SELinux: Disabled on system
[528624.211] (II) AIGLX: enabled GLX_MESA_copy_sub_buffer
[528624.211] (II) AIGLX: enabled GLX_INTEL_swap_event
[528624.211] (II) AIGLX: enabled GLX_ARB_create_context
[528624.211] (II) AIGLX: enabled GLX_ARB_create_context_profile
[528624.211] (II) AIGLX: enabled GLX_EXT_create_context_es2_profile
[528624.211] (II) AIGLX: enabled GLX_SGI_swap_control and GLX_MESA_swap_control
[528624.211] (II) AIGLX: GLX_EXT_texture_from_pixmap backed by buffer objects
[528624.211] (II) AIGLX: Loaded and initialized r600
[528624.211] (II) GLX: Initialized DRI2 GL provider for screen 0


A successful start continues like:

[529019.263] (II) RADEON(0): Setting screen physical size to 444 x 277
[529019.291] (II) config/udev: Adding input device Power Button (/dev/input/event4)
[529019.291] (**) Power Button: Applying InputClass "evdev keyboard catchall"
[529019.291] (**) Power Button: Applying InputClass "system-setup-keyboard"
[529019.291] (II) LoadModule: "evdev"
[529019.291] (II) Loading /usr/lib64/xorg/modules/input/evdev_drv.so
[529019.291] (II) Module evdev: vendor="X.Org Foundation"
[529019.291]    compiled for 1.14.4, module version = 2.8.4
[529019.291]    Module class: X.Org XInput Driver
[529019.291]    ABI class: X.Org XInput driver, version 19.2
[529019.291] (II) Using input driver 'evdev' for 'Power Button'
[529019.291] (**) Power Button: always reports core events
[529019.291] (**) evdev: Power Button: Device: "/dev/input/event4"
[529019.291] (--) evdev: Power Button: Vendor 0 Product 0x1
[529019.291] (--) evdev: Power Button: Found keys
[529019.291] (II) evdev: Power Button: Configuring as keyboard
[529019.291] (**) Option "config_info" "udev:/sys/devices/LNXSYSTM:00/LNXPWRBN:00/input/input4/event4"
[529019.291] (II) XINPUT: Adding extended input device "Power Button" (type: KEYBOARD, id 6)
[529019.291] (**) Option "xkb_rules" "evdev"
(etc)
Comment 2 Michel Dänzer 2015-04-26 01:35:28 UTC
(In reply to udo from comment #1)
> [528624.211] (II) GLX: Initialized DRI2 GL provider for screen 0
> 
> 
> A successful start continues like:
> 
> [529019.263] (II) RADEON(0): Setting screen physical size to 444 x 277

Since the Xorg log file ends abruptly, please check the Xorg stderr output. Assuming you're using gdm, it should be captured in /var/log/gdm*/:*.log or in the systemd journal.

BTW, make sure the build files are always getting re-generated as necessary after changing to a different Git commit by passing --enable-maintainer-mode to the configure script or just running the autogen.sh script again.
Comment 3 udo 2015-04-26 03:39:40 UTC
W,r,t, gdm log files:
Would this piece help?

(II) SELinux: Disabled on system
(II) AIGLX: enabled GLX_MESA_copy_sub_buffer
(II) AIGLX: enabled GLX_INTEL_swap_event
(II) AIGLX: enabled GLX_ARB_create_context
(II) AIGLX: enabled GLX_ARB_create_context_profile
(II) AIGLX: enabled GLX_EXT_create_context_es2_profile
(II) AIGLX: enabled GLX_SGI_swap_control and GLX_MESA_swap_control
(II) AIGLX: GLX_EXT_texture_from_pixmap backed by buffer objects
(II) AIGLX: Loaded and initialized r600
(II) GLX: Initialized DRI2 GL provider for screen 0
Xorg: /usr/include/xorg/privates.h:123: dixGetPrivateAddr: Assertion `key->initialized' failed.

This is seen in multiple log files.
Comment 4 Michel Dänzer 2015-04-27 03:34:13 UTC
Created attachment 115361 [details] [review]
Don't call radeon_get_pixmap_private() when using EXA

Does this patch fix the problem?
Comment 5 udo 2015-04-27 05:13:28 UTC
(In reply to Michel Dänzer from comment #4)
> 
> Does this patch fix the problem?

It appears to do just that!
(apply patch, compile, copy in place, log out, in works)

Maybe some more testing?
Comment 6 Michel Dänzer 2015-04-28 00:54:52 UTC
commit 340baf3804b7d9de8082badfc715a9bee7856e8f
Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Mon Apr 27 15:07:06 2015 +0900

    Don't call radeon_get_pixmap_private() when using EXA
    
    It only works when using glamor.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.