Don't call radeon_get_pixmap_private() when using EXA

It only works when using glamor.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=90169

Reviewed-by: Alex Deucher <alexander.deucher@amd.com>